# binaryVector

./: CMakeLists.txt  CMakeLists.txt~  compile_commands.json  doctest.txt  doctest.txt~  logoSmaller.xcf  readme.md  test.cpp
ext/: CMakeLists.txt
include/: binaryGraph.hpp~  binaryVector.hpp  binaryVector.hpp~  test.cpp~
src/: binaryVector.cpp  binaryVector.cpp~  test.cpp  test.cpp~
